--- a/config.yaml
+++ b/config.yaml
@@ -1,28 +1,38 @@
-tests_dir: './suites'
-#load_xmind_suites: false
-#load_yaml_suites: true
+concurrency: 50
+tests_dir: 'suites'
+auto_clean: true
+custom_headers:
+  x-seaweedfs-destination: '/buckets/aws-tests'
 load_xmind_suites: true
 load_yaml_suites: false
 client_config:
   region_name: 'ap-southeast-1'
+  endpoint_url: 'http://localhost:8333'
 identities:
   admin:
-    account_id: 'xxx'
-    aws_access_key_id: 'xxx'
-    aws_secret_access_key: 'xxx'
+    account_id: 'admin'
+    aws_access_key_id: 'xxxx'
+    aws_secret_access_key: 'xxxx'
   anonymous:
-    account_id: '65a011a29cdf8ec533ec3d1ccaae921c'
+    account_id: 'anonymous'
 global_variables:
   group_all_users_url: 'http://acs.amazonaws.com/groups/global/AllUsers'
   group_authenticated_users_url: 'http://acs.amazonaws.com/groups/global/AuthenticatedUsers'
 exporters:
   xmind:
     file_path: .wd/xmind_exports/aws_tests.xmind
-    include_fields: [ 'parameters', 'assertion', 'response', 'errorInfo' ]
+    include_fields: [ 'errorInfo', 'parameters', 'assertion', "suiteLocals", 'response' ]
+    clear_tree_node: false
 hide_enabled: true
 suite_filters:
   includes:
-    - '.*AbortMultipartUpload.*'
-  #    - '.*Ownership-ObjectWriter.*'
+    - '.*Ownership-BucketOwnerEnforced.*'
+    - '.*Ownership-BucketOwnerPreferred.*'
+    - '.*Ownership-ObjectWriter.*'
+    - ".*Ownership-None.*"
+    #    - '.*DropAllBuckets.*'
+    #    - '.*GetBucketOwnershipControls-lhhdz.*'
   excludes:
-#    - '.*'
+    - '.*DropAllBuckets.*'
+    - '.*Incompitable.*'
+    - '.*ListObjectVersions.*'
